force-app/main/default/objects/Lead/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>ABN format is 11 numbers long.</description>
    <label>ABN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>