force-app/main/default/objects/Lead/fields/Application_Form__c.field-meta.xml
<CustomField>
    <fullName>Application_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would you like an Account Application Form, this field is used on the NCCC.</inlineHelpText>
    <label>Application Form</label>
    <type>Checkbox</type>
</CustomField>