force-app/main/default/objects/Lead/fields/APS_Number__c.field-meta.xml
<CustomField>
    <fullName>APS_Number__c</fullName>
    <label>APS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>