force-app/main/default/objects/Lead/fields/Creator_Centre_Code__c.field-meta.xml
<CustomField>
    <fullName>Creator_Centre_Code__c</fullName>
    <label>Creator Centre Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>