force-app/main/default/objects/Lead/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>The purpose of this field is to leverage the unique identifier in Salesforce to identify the customer.</description>
    <label>Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>