force-app/main/default/objects/Lead/fields/Existing_Business_Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>Existing_Business_Credit_Account__c</fullName>
    <description>Used on Zing w2L form</description>
    <label>Existing Business Credit Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>