force-app/main/default/objects/Lead/fields/Expected_Volumes_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Expected_Volumes_Per_Week__c</fullName>
    <description>StarTrack Expected Volumes Per Week field will capture the expected volumes for the week.</description>
    <label>Expected Volumes Per Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-50</fullName>
            </value>
            <value>
                <fullName>51-200</fullName>
            </value>
            <value>
                <fullName>200+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>