force-app/main/default/objects/Lead/fields/Hidden_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Hidden_First_Name__c</fullName>
    <formula>FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>{Hidden} First Name</label>
    <type>Text</type>
</CustomField>