force-app/main/default/objects/Lead/fields/JSONApplicationFormData__c.field-meta.xml
<CustomField>
    <fullName>JSONApplicationFormData__c</fullName>
    <description>Contains data fields in the application form which don&apos;t map directly to lead custom fields</description>
    <label>JSONApplicationFormData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>