force-app/main/default/objects/Lead/fields/Lead_Converted_or_Disqualified_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted_or_Disqualified_Time__c</fullName>
    <description>Lead Converted or Disqualified Time</description>
    <label>Lead Converted or Disqualified Time</label>
    <type>DateTime</type>
</CustomField>