force-app/main/default/objects/Lead/fields/Lead_Creator_Centre__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creator_Centre__c</fullName>
    <label>Lead Creator Centre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>