force-app/main/default/objects/Lead/fields/Lead_Creator_State__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creator_State__c</fullName>
    <label>Lead Creator State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>Qld</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>Tas</fullName>
            </value>
            <value>
                <fullName>Vic</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>