force-app/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <label>Lead ID/Sales Activity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>