force-app/main/default/objects/Lead/fields/Lead_Seeker__c.field-meta.xml
<CustomField>
    <fullName>Lead_Seeker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify leads created using the Lead Seeker initiative</description>
    <inlineHelpText>Tick this checkbox if the lead was created as part of the Lead Seeker Initiative</inlineHelpText>
    <label>Lead Seeker</label>
    <type>Checkbox</type>
</CustomField>