force-app/main/default/objects/Lead/fields/LeadSeekerConversionOverride__c.field-meta.xml
<CustomField>
    <fullName>LeadSeekerConversionOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Seeker Conversion Override</label>
    <type>Checkbox</type>
	<description>Tick this to allow linking to an old Opportunity when converting a Lead Seeker record.</description>
	<inlineHelpText>Tick this to allow linking to an old Opportunity when converting a Lead Seeker record.</inlineHelpText>
</CustomField>