force-app/main/default/objects/Lead/fields/Legal_Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Legal_Marketing_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this form checkbox field is checked, then we can set the Privacy/Marketing Opt Out field to NO</description>
    <label>Legal Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>