force-app/main/default/objects/Lead/fields/Opportunity_Initial_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Initial_Estimate__c</fullName>
    <inlineHelpText>Initial annual estimate for the opportunity</inlineHelpText>
    <label>Opportunity Initial Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>