force-app/main/default/objects/Lead/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <description>Used to capture the sector of the organisation in Leads.  This will populate the Organisation Sector on the Organisation object when a lead is converted.</description>
    <label>Organisation Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Commercial Acquisition</fullName>
            </value>
            <value>
                <fullName>Large Account</fullName>
            </value>
            <value>
                <fullName>Mid Market</fullName>
            </value>
            <value>
                <fullName>Mid Market Acquisition</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Business Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>