force-app/main/default/objects/Lead/fields/Outlet_Plant_Number__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Plant_Number__c</fullName>
    <description>Outlet Plant Number used by Retail FulFillment business unit</description>
    <label>Outlet Plant Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>