force-app/main/default/objects/Lead/fields/Public_Id__c.field-meta.xml
<CustomField>
    <fullName>Public_Id__c</fullName>
    <description>Used in the Green Shoots Campaign.  Allows the email template to merge in the Public Id of the Campaign Member record.</description>
    <label>Public Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>