force-app/main/default/objects/Lead/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <description>Supplied by Adobe analytics. &quot;You can see which search engines and web sites outside your domain send visitors to you.&quot; 
Owner Brendan Lee/David Jukes</description>
    <label>Publisher</label>
    <length>250</length>
    <type>Text</type>
</CustomField>