force-app/main/default/objects/Lead/fields/ReferralSource__c.field-meta.xml
<CustomField>
    <fullName>ReferralSource__c</fullName>
    <description>Where the Lead is identified from for capture by AP (e.g. trade show, advertisement, external referral, etc.)</description>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral from an existing user of service</fullName>
            </value>
            <value>
                <fullName>State peak body</fullName>
            </value>
            <value>
                <fullName>National peak body</fullName>
            </value>
            <value>
                <fullName>At an industry event</fullName>
            </value>
            <value>
                <fullName>Google search</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>