force-app/main/default/objects/Lead/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <description>Used to identify the current relationship status to the organisation 
Requested and owned by Christopher Doyle 
Customer &amp; Market Analyst.
Customer Data &amp; Insights</description>
    <inlineHelpText>Used to identify the current relationship status to the organisation</inlineHelpText>
    <label>Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Prospect - Web Scraped</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>