force-app/main/default/objects/Lead/fields/Send_Business_Credit_Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Send_Business_Credit_Account_Info__c</fullName>
    <description>Used on Zing w2L form</description>
    <label>Send Business Credit Account Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>