force-app/main/default/objects/Lead/fields/SFGA__Web_Source__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Web_Source__c</fullName>
    <defaultValue>&quot;none&quot;</defaultValue>
    <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
    <label>Web Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>