force-app/main/default/objects/Lead/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <inlineHelpText>The name that the Customer trades under.</inlineHelpText>
    <label>Trading Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>