force-app/main/default/objects/Lead/recordTypes/BG_Standard.recordType-meta.xml
<RecordType>
    <fullName>BG_Standard</fullName>
    <active>true</active>
    <businessProcess>BG_Sales</businessProcess>
    <label>BG_Standard</label>
</RecordType>