force-app/main/default/objects/Lead/recordTypes/Conveyancer_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Conveyancer_Onboarding</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record type for Conveyancer Onboarding</description>
    <label>Conveyancer Onboarding</label>
</RecordType>