force-app/main/default/objects/Lead/recordTypes/SecurePay.recordType-meta.xml
<RecordType>
    <fullName>SecurePay</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>SecurePay Lead</description>
    <label>SecurePay</label>
</RecordType>