force-app/main/default/objects/Lead/recordTypes/StarTrack_Lead.recordType-meta.xml
<RecordType>
    <fullName>StarTrack_Lead</fullName>
    <active>true</active>
    <businessProcess>BG_Sales</businessProcess>
    <description>StarTrack lead process record type.</description>
    <label>StarTrack Lead</label>
</RecordType>