force-app/main/default/objects/Lead/validationRules/Address_Validation_Before_Qualification.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Validation_Before_Qualification</fullName>
    <active>true</active>
    <description>Checking whether address is validated before Qualification</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    ISPICKVAL(Status, &quot;Qualified&quot;),
    $Permission.BG_Core,
    NOT($Permission.BG_Sales),
    NOT(Address_Validated__c)
    )</errorConditionFormula>
    <errorMessage>The Address must be confirmed via the Address Tab.</errorMessage>
</ValidationRule>