force-app/main/default/objects/Lead/validationRules/BG_Qualified_Lead_PrimaryService_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>BG_Qualified_Lead_PrimaryService_Req</fullName>
    <active>true</active>
    <description>Do not qualify till primary service is selected for BG_Standard Lead</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
RecordType.DeveloperName = &apos;BG_Standard&apos;,
ISPICKVAL(Status, &quot;Qualified&quot;),
ISPICKVAL(Product__c, &quot;&quot;) 
)</errorConditionFormula>
    <errorMessage>Primary service should be selected</errorMessage>
</ValidationRule>