force-app/main/default/objects/Lead/validationRules/BG_Validation_before_move_to_Qualify.validationRule-meta.xml
<ValidationRule>
    <fullName>BG_Validation_before_move_to_Qualify</fullName>
    <active>true</active>
    <description>Checking whether Lead is qualified before moving to Qualified Stage</description>
    <errorConditionFormula>AND(
    NOT($Permission.BG_Sales),
    $Permission.BG_Core, 
    NOT(ISPICKVAL(CNA_Status__c,&apos;Completed&apos;)),
    ISPICKVAL(Status, &apos;Qualified&apos;),
    RecordType.DeveloperName = &apos;BG_Standard&apos;
)</errorConditionFormula>
    <errorMessage>Lead cannot be Qualified – Please complete Customer Needs section</errorMessage>
</ValidationRule>