force-app/main/default/objects/Lead/validationRules/BG_Validation_Opportunity_Initial_Est.validationRule-meta.xml
<ValidationRule>
    <fullName>BG_Validation_Opportunity_Initial_Est</fullName>
    <active>true</active>
    <description>This rule is to check Opportunity Initial Estimate field is null for Lead Vero Profile Users</description>
    <errorConditionFormula>AND(
NOT($Permission.BG_Sales),
$Permission.BG_Core,
ISBLANK(Opportunity_Initial_Estimate__c),
ISPICKVAL(Status, &apos;Qualified&apos;),
ISPICKVAL(CNA_Status__c,&apos;Completed&apos;),
RecordType.DeveloperName = &apos;BG_Standard&apos;
)</errorConditionFormula>
    <errorMessage>“Opportunity Initial Estimate is empty, please review and complete Customer Needs section prior to qualifying the Lead”</errorMessage>
</ValidationRule>