force-app/main/default/objects/Lead/validationRules/Email_required_on_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_required_on_creation</fullName>
    <active>true</active>
    <description>Email field will be made mandatory at time of lead creation</description>
    <errorConditionFormula>AND(
ISBLANK( Email ),
RecordType.DeveloperName = &apos;BG_Standard&apos;,
NOT( $User.Is_Integration_User__c )
)</errorConditionFormula>
    <errorMessage>Please enter the email of the lead</errorMessage>
</ValidationRule>