force-app/main/default/objects/Lead/validationRules/In_Progress_Status_Dependency.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress_Status_Dependency</fullName>
    <active>true</active>
    <description>In Progress Status cannot be blank when Lead Status is selected</description>
    <errorConditionFormula>AND(

  (RecordType.DeveloperName = &apos;SecurePay&apos;),
  ISPICKVAL(Status, &apos;In progress&apos;),
  ISPICKVAL(In_Progress_Status__c, &apos;&apos;) 

)</errorConditionFormula>
    <errorDisplayField>In_Progress_Status__c</errorDisplayField>
    <errorMessage>In Progress Status cannot be blank when Lead Status is In progress</errorMessage>
</ValidationRule>