force-app/main/default/objects/Lead/validationRules/Lead_Customer_Type_Validations.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Customer_Type_Validations</fullName>
    <active>false</active>
    <description>Customer type should not be null at the time of lead changes to Qualified or Converted</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
ISPICKVAL(Status, &quot;Qualified&quot;),
ISPICKVAL(Status, &quot;Verified&quot;),
ISPICKVAL(Status, &quot;MyPost Business&quot;)
),
OR(
RecordType.DeveloperName = &apos;BG_Standard&apos;,
RecordType.DeveloperName = &apos;StarTrack_Lead&apos;
),
ISBLANK(TEXT(Customer_Type__c))
)</errorConditionFormula>
    <errorMessage>Customer Type needs to be selected.</errorMessage>
</ValidationRule>