force-app/main/default/objects/Lead/validationRules/Lead_Qualified_Converted_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Qualified_Converted_Validation</fullName>
    <active>false</active>
    <description>Please Remove this validation rule after December 2020.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
ISPICKVAL(Status, &quot;Qualified&quot;),
ISPICKVAL(Status, &quot;Verified&quot;),
ISPICKVAL(Status, &quot;MyPost Business&quot;)
),
OR(
RecordType.DeveloperName = &apos;BG_Standard&apos;,
RecordType.DeveloperName = &apos;StarTrack_Lead&apos;
),
OR(ISBLANK(FirstName), ISBLANK(LastName), ISBLANK(Email), ISBLANK(Street), ISBLANK(City), ISBLANK(State), ISBLANK(PostalCode), ISBLANK(TEXT(Customer_Type__c)), AND(ISBLANK(Phone), ISBLANK(MobilePhone)))
)</errorConditionFormula>
    <errorMessage>Please provide First Name, Last Name, Email, Address with Postal Code, Customer Type and either &apos;Phone or Mobile&apos; prior to qualifying the Lead or converting the Lead into an Opportunity</errorMessage>
</ValidationRule>