force-app/main/default/objects/Lead/validationRules/Lead_Source_cannot_be_Updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_cannot_be_Updated</fullName>
    <active>true</active>
    <description>The Lead Source field cannot be updated after a lead record has been created.</description>
    <errorConditionFormula>AND( NOT(ISNEW()),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name&lt;&gt;&apos;Sales Admin&apos;,
NOT(RecordType.Name = &apos;Conveyancer Onboarding&apos;),
ISCHANGED(LeadSource)
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>You cannot edit the Lead Source once it&apos;s been created</errorMessage>
</ValidationRule>