force-app/main/default/objects/Lead/validationRules/One_phone_number_must_be_provided.validationRule-meta.xml
<ValidationRule>
    <fullName>One_phone_number_must_be_provided</fullName>
    <active>true</active>
    <description>StarTrack: One phone number field must be populated</description>
    <errorConditionFormula>AND(ISBLANK(MobilePhone), ISBLANK(Phone),$RecordType.DeveloperName = &quot;StarTrack_Lead&quot;)</errorConditionFormula>
    <errorMessage>Please provide one phone number value</errorMessage>
</ValidationRule>