force-app/main/default/objects/Lead/validationRules/Phone_Or_Mobile_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Or_Mobile_Required</fullName>
    <active>true</active>
    <description>Phone or mobile is required when creating a lead</description>
    <errorConditionFormula>AND(
ISBLANK(Phone),
ISBLANK(MobilePhone),
RecordType.DeveloperName = &apos;BG_Standard&apos;,
NOT( $User.Is_Integration_User__c ) 
)</errorConditionFormula>
    <errorMessage>Please enter either a mobile or phone number</errorMessage>
</ValidationRule>