force-app/main/default/objects/Lead/validationRules/PostCode_cannot_be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>PostCode_cannot_be_Null</fullName>
    <active>false</active>
    <description>Postcode cannot be null when Lead is in Qualified Status</description>
    <errorConditionFormula>AND (
ISPICKVAL(Status,&apos;Qualified&apos;),
 ISBLANK(PostalCode )
)</errorConditionFormula>
    <errorMessage>Post Code needs to be populated prior to changing the Stage to &apos;Qualified</errorMessage>
</ValidationRule>