force-app/main/default/objects/Lead/validationRules/SSSW_Required_Lead_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>SSSW_Required_Lead_Fields</fullName>
    <active>true</active>
    <description>When a lead is created or edited by a SSSW agent, they are required to complete mandatory fields
REQ1707176 - request by Brian Young - Business Support Lead
REQ1760147 - updated to exclude the team manager within the permission set</description>
    <errorConditionFormula>AND(
 $Permission.Lead_Verification_Manager  = FALSE,
 $Profile.Name = &apos;SSSW - Service Agent&apos;,
 $RecordType.Name = &apos;Standard&apos;,

 OR(
  
  ISBLANK(FirstName),
  ISBLANK(Trading_Name__c),
  ISBLANK(Website),
  ISBLANK(Email),    
  ISBLANK(Street),
  ISBLANK(City),
  ISBLANK(State),
  ISBLANK(PostalCode),
  ISBLANK( Description),

  AND(
    ISBLANK(Phone),
    ISBLANK(MobilePhone)  
  )
 )
)</errorConditionFormula>
    <errorMessage>Please complete 
•	First Name
•	Trading Name
•	Website
•	Email
•	Street
•	City
•	State
•	Postcode
•	Description
&amp; either 
•	Mobile
•	Phone</errorMessage>
</ValidationRule>