force-app/main/default/objects/Lead/listViews/AusPost_Online_Payments_1.listView-meta.xml
<ListView>
    <fullName>AusPost_Online_Payments_1</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>In progress,Verified</value>
    </filters>
    <label>AusPost Online Payments</label>
    <language>en_US</language>
    <sharedTo>
        <role>PSSecurePayDirectorSales</role>
        <role>PSSecurePaySR</role>
    </sharedTo>
</ListView>