force-app/main/default/objects/Lead/listViews/B2B_Marketing_Lead.listView-meta.xml
<ListView>
    <fullName>B2B_Marketing_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>B2B Marketing</label>
    <queue>B2B_Marketing</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>