force-app/main/default/objects/Lead/listViews/Bayswater_Hub_Pilot.listView-meta.xml
<ListView>
    <fullName>Bayswater_Hub_Pilot</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Locally_Managed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Bayswater Hub Pilot</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>